# _Request

./: .flake8  LICENSE  README.md  pyproject.toml  setup.py
patisson_request/: __init__.py  cache.py  core.py  depends.py  errors.py  jwt_tokens.py  roles.py  service_requests.py  service_responses.py  service_roles.py  service_routes.py  services.py  types.py
patisson_request/graphql/: __init__.py  graphql2python_books.yaml  graphql2python_users.yaml  queries.py
patisson_request/graphql/models/: base.py  books_model.py  users_models.py
patisson_request/graphql/schemas/: books.graphql  users.graphql
tests/: logger.py  test_cache.py  test_core.py  test_roles.py
