[tool.poetry]
name = "patisson-request"
version = "1.7.0"
description = "a library that regulates the interaction between microservices"
authors = ["EliseyGodX"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
pydantic = "^2.10.4"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation-httpx = "^0.50b0"
redis = "^5.2.1"
pymemcache = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest-httpx = "^0.35.0"
pytest-html = "^4.1.1"
pytest-asyncio = "^0.25.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
