[tool.poetry]
name = "patisson-request"
version = "1.8.0"
description = "a library that regulates the interaction between microservices"
authors = ["EliseyGodX"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
pydantic = "^2.10.4"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation-httpx = "^0.50b0"
redis = "^5.2.1"
pymemcache = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest-httpx = "^0.35.0"
pytest-html = "^4.1.1"
pytest-asyncio = "^0.25.0"
pytest = "^8.3.4"
flake8 = "^7.1.1"
flake8-isort = "^6.1.1"
flake8-bugbear = "^24.12.12"
black = "^24.10.0"
flake8-pyproject = "^1.2.3"
flake8-docstrings = "^1.7.0"
pytest-flake8 = "^1.3.0"


[tool.black]
line-length = 110

[tool.flake8]
max-line-length = 110
required-plugins = [
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-isort",
    "flake8-pyproject",
    "mccabe",
    "pycodestyle",
    "pyflakes",
]
ignore = [
    "B907",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D104",
    "D106",
    "D107",
    "E701",
    "I001",
    "I005",
    "W503",
]
select = ["ANN", "B", "C", "D", "E", "F", "I", "T4", "W"]
extend-select = ["B9"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
